--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,4 +6,7 @@ services:
     ports:
       - '8086:8086'
     volumes:
-      - ./influxdb:/var/lib/influxdb
+      - influxdb:/var/lib/influxdb
+
+volumes:
+  influxdb:
